# VajraClaw

./: .gitignore  .zenodo.json  DROS_Runtime_Attribution_Framework_Bilingual.md  DROS_Runtime_Attribution_Framework_EN.md  DROS_Runtime_Attribution_Framework_ZH.md  Dockerfile  FAQ.md  FAQ_en.md  README.md  docker-compose.yml
challenges/agent_security_challenge/: Dockerfile  README.md  baseline_configurations.yaml  benchmark_manifest.yaml  challenge_spec.md  docker-compose.yml  dros_threat_matrix.yaml  known_limitations.md  pyproject.toml
challenges/agent_security_challenge/atr_rules/: atr_t001_jailbreak.yaml  atr_t002_indirect.yaml  atr_t003_cmd_injection.yaml  atr_t004_exfiltration.yaml
challenges/agent_security_challenge/docs/: agent_system_prompt_guide.md
challenges/agent_security_challenge/dros_cli/: __init__.py  __main__.py  contract_gen.py  risk_db.yaml
challenges/agent_security_challenge/dros_cli/examples/: finance_agent_example.py  langgraph_demo.py  (+2 more)
challenges/agent_security_challenge/dros_sdk/: __init__.py  guard.py
challenges/agent_security_challenge/examples/: openrouter_live_demo.py  vulnerable_vs_protected.py
challenges/agent_security_challenge/hidden_cases/: suite.json
challenges/agent_security_challenge/public_cases/: suite.json
challenges/agent_security_challenge/src/: atr_engine.py  challenge_sandbox.py  control_plane.py  fpr_auditor.py  generators.py  oscal_logger.py
challenges/agent_security_challenge/templates/: dashboard.html
challenges/agent_security_challenge/tests/: probe_fpr.py  replay_benchmark.py  run_attacks.py  test_sdk.py
(+19 files in other folders)
